Adding function that finds disjoint regions